--- a/01-EDA.Rmd
+++ b/01-EDA.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r}
 library(readxl)
+library(DataExplorer)
 dataset <- read_excel("data/dataset para análisis exploratorio.xlsx")
 ```
 
