--- a/04-classification/04-classification.Rmd
+++ b/04-classification/04-classification.Rmd
@@ -4,6 +4,7 @@ author: "Ana Diedrichs"
 date: "May 22, 2019"
 output:
   pdf_document: default
+  word_document: default
   html_document: default
 ---
 
@@ -22,7 +23,7 @@ suppressMessages(library(tidyverse))
 ```{r,echo = FALSE}
 # cargamos los datos 
 library(readxl)
-dataset <- read_excel("data/Dataset para enfoque 2 y 3.xlsx")
+dataset <- read_excel("../data/Dataset para enfoque 2 y 3.xlsx")
 # escalamos dataset en valores 0 a 1
 range01 <- function(x){(x-min(x))/(max(x)-min(x))}
 data <- data.frame(dataset[,1], apply(dataset[-1],2,range01))
@@ -145,4 +146,27 @@ dotplot(results)
 ```
 Observamos que  la red neuronal tuvo un mejor desempeño que LDA.
 
-## **TODO agregar bootstrapping con neural networks**
+## **TODO agregar algo con bootstrapping ??**
+
+# chusmeando que daba random forest
+
+```{r}
+#' ## Random Forest
+#' 
+set.seed(SEED)
+model.rf <- train(as.factor(Origen)~., data=data, 
+                  trControl=train_control, method="rf",metric=METRIC, importance=T)
+
+#'  ### Results of random forest model
+print(model.rf)
+plot(model.rf)
+print(model.rf$finalModel)
+#' ### Variable importance
+varImp(model.rf)
+plot(varImp(model.rf))
+#' Predicción en conjunto de testeo test-set
+pred <- predict(model.rf,data)
+c <- confusionMatrix(as.factor(pred), as.factor(data$Origen),mode = "prec_recall")
+print(c)
+```
+
