eval=FALSE para plot que demora mucho en ejecutar

--- a/03-clustering/presentacion/04-clustering-kmeansVsDBSCAN.Rmd
+++ b/03-clustering/presentacion/04-clustering-kmeansVsDBSCAN.Rmd
@@ -95,11 +95,10 @@ plot_boxplot(dataset,by="Origen")
 pairs(dataset[,-1],colnames(dataset[-1]),pch = 21,bg = c("red", "green3", "blue")[unclass(as.factor(dataset$Origen))])
 ```
 
-## Dataset jugos de uva: plot de pares
 
-```{r}
+```{r,eval=FALSE}
 #este plot demora un poco en realizarse
-
+# por eso eval=FALSE para que no lo ejecute.
 pm <- suppressMessages(ggpairs(dataset, mapping = aes(color = Origen), columns = colnames(dataset)[-ncol(dataset)]))
 pm
 ```
