--- a/03-clustering/03-clustering.Rmd
+++ b/03-clustering/03-clustering.Rmd
@@ -8,13 +8,16 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
 ```
 
-```{r}
+```{r, include=FALSE}
 library(readxl)
 library(dplyr)
 library(DataExplorer)
+library(factoextra)
+library(cluster)
+library(fpc)
 #dataset <- read_excel("data/dataset para análisis exploratorio.xlsx")
 dataset <- read_excel("../data/Dataset para enfoque 2 y 3.xlsx")
 dataset <- dataset %>% filter(Origen != "CH")
@@ -31,7 +34,7 @@ dataset <- data.frame(dataset[,1], apply(dataset[-1],2,range01))
 
 data <- dataset[-1]
 ```
-## Clustering intro
+# Clustering intro
 
 Vamos a aplicar un enfoque no supervisado sobre los datos mediante agrupamiento, sin considerar la etiqueta Origen o variable de clase. Sí usaremos la misma para relacionar y analizar el agrupamiento obtenido.
 
@@ -51,9 +54,11 @@ plot(1:15, wss, type="b", xlab="Number of Clusters",
 
 Observamos que de un k=1 a un k=2 disminuye en un tercio el WSS. 
 
-### K-means
+## K-means
 
-Aplicamos k-means clustering considerando $k=2$.
+Nuestra pregunta es, ¿se agrupan "naturalmente" las muestras por su origen? ¿hay outliers? ¿Hay muestras de Brasil que son parecidas a las de Argentina, viceversa?
+
+Aplicamos k-means clustering considerando $k=2$, ya que tenemos sólo dos etiquetas AR y BR. 
 
 ```{r}
 set.seed(11235)
@@ -81,21 +86,41 @@ table(mydata$fit.cluster,dataset$Origen)
 Observamos que para el clúster "2" han sido asignadas la mayoría de las muestras de Argentina, unas `r table(mydata$fit.cluster,dataset$Origen)["2","AR"]` en total y tan solo `r table(mydata$fit.cluster,dataset$Origen)["2","BR"]` de Brasil.
 
 
-#### Análisis o visualización de clústers, k=2
+### Análisis o visualización de clústers, k=2
+
+Comparamos en la siguiente tabla la agrupación de elementos en sus clúster 1 o 2 vs su etiqueta Origen
+
+```{r}
+table(mydata$fit.cluster,dataset$Origen)
+```
+
+Observamos que en el clúster 2 la mayoría de las observaciones son de Argentina, excepto 1 es de Brasil. Considerar esto al analizar los histogramas.
+
+A continuación mostramos la distribución (histograma) de las muestras que fueron agrupadas para el clúster 1 y para el 2.
+
+```{r}
+d <- mydata
+d$fit.cluster <- as.factor(d$fit.cluster)
+plot_boxplot(d,by="fit.cluster")
+```
+
+De acuerdo al diagrama de cajas de arriba observamos como k-means agrupó los dos clústeres. El clúster 2, por ejemplo, tiene más concentraciones en promedio de Y, Pd, Fe, Mo. Recordemos que el clúster 2 la mayoría de las observaciones o muestras son de Argentina. **¿Qué características podemos extraer de esto?**
+
+Ahora observaremos la distribución dentro de cada clúster y según su origen.
+
+
+*Cluster 1*
 
 ```{r }
 k.1 <- dataset[fit$cluster==1,]
 k.2 <- dataset[fit$cluster==2,]
 ```
 
-A continuación mostramos la distribución (histograma) de las muestras que fueron agrupadas para el clúster 1 y para el 2.
-
-**¿Qué características podemos extraer de esto?**
-
 ```{r }
 plot_boxplot(k.1, by = "Origen")
 ```
-#### Cluster 2
+
+*Cluster 2*
 
 ```{r }
 plot_boxplot(k.2, by = "Origen")
@@ -104,26 +129,18 @@ plot_boxplot(k.2, by = "Origen")
 Para graficar las observaciones agrupadas en los clusteres, dado que tenemos más de dos dimensiones, se nos complica graficar mas bien visualizar en dos ejes. Usamos la libreria cluster que reduce las dimensiones y permite graficar los clústeres.
 
 ```{r}
-library(cluster) 
-clusplot(mydata, fit$cluster, color=TRUE, shade=TRUE, 
-   labels=2, lines=0)
-```
 
-Table
-
-```{r}
-table(mydata$fit.cluster,dataset$Origen)
-```
-
-```{r}
 # vary parameters for most readable graph
-clusplot(data, fit$cluster, color=TRUE, shade=TRUE, 
-   labels=2, lines=0)
+clusplot(data, fit$cluster, color=TRUE, shade=TRUE, labels=2, lines=0)
 
 # Centroid Plot against 1st 2 discriminant functions
-library(fpc)
+
 plotcluster(data, fit$cluster)
 ```
+
+
+
+
 
 Comparamos estadisticas de cluster con k=2
 
@@ -134,47 +151,35 @@ cluster.stats(distancia, fit$cluster)
 ```
 
 
-**ANA: de aquí en adelante no realicé análisis aún**
+## Density-based spatial clustering of applications with noise (DBSCAN ) 
 
-### Clustering por la mediana: 
-
-El uso de la media implica que k-means clustering sea altamente sensible a outliers o valores extremos.
-Esto puede afectar severamente la asignación de observaciones a los clústeres.
-El algoritmo PAM es más robusto.
-
-
-### Clustering jerárquico
-
-#### Ward Hierarchical Clustering
-```{r}
-# Ward Hierarchical Clustering
-d <- dist(data, method = "euclidean") # distance matrix
-fit <- hclust(d, method="ward")
-plot(fit) # display dendogram
-groups <- cutree(fit, k=2) # cut tree into 5 clusters
-# draw dendogram with red borders around the 5 clusters
-rect.hclust(fit, k=2, border="red") 
-```
-#### Ward Hierarchical Clustering with Bootstrapped p values
+El comportamiento de DBSCAN es muy sensible al cambio en los valores eps (radio desde el centro) y MinPts (cantidad de puntos mínima del cluster)
 
 ```{r}
+library("fpc")
+#Notar que es muy diferente el resultado a medida que modificamos e parametro eps y MinPts.
+set.seed(123)
+db <- fpc::dbscan(data, eps = 0.65, MinPts = 5)
+fviz_cluster(db,data)
 
-library(pvclust)
-fit <- pvclust(data, method.hclust="ward",
-               method.dist="euclidean")
-plot(fit) # dendogram with p values
-# add rectangles around groups highly supported by the data
-pvrect(fit, alpha=.95)
+
+```
+Las observaciones o muestras 1,3,4,7,10, por ejemplo, las toma como outliers o valores extremos. Notamos que hay varios de ellos para la configuración eps=0.65 y minPts=5. 
+
+En la siguiente tabla se muestra como 0 las observaciones que consideró outliers vs su clasificación de origen inicial.
+
+```{r}
+table(db$cluster,dataset$Origen)
 ```
 
-### Mas info o info extra 
+Las observaciones etiquetadas como cero (0) son los outliers.
 
-https://uc-r.github.io/kmeans_clustering
 
-https://www.semanticscholar.org/paper/Clustering-Methods-and-Their-Uses-in-Computational-Downs-Barnard/d81cea597b15deebd940873ee12a4e44019e25af
+## Conclusiones
 
-http://www.bioconductor.org/packages/release/bioc/vignettes/ChemmineR/inst/doc/ChemmineR.html
+* Se observan algunas variables que pueden ser buenas para clasificar en origen, dado este dataset como Cr.
+* Son pocas muestras (26) por lo que no nos animamos a realizar conclusiones globales
+* Se observa en ambos algoritmos que al menos uno de los grupos contiene solo observaciones de Argentina
+* Tanto DBSCAN como kmeans se ven afectados por la variabilidad de las mediciones / valores extremos. En k-means el cluster 2 incluyó las observaciones que tuvieron más concentración de determinados elementos.
+* Ninguno de los grupos es fácilmente identificable, excepto la observación peculiar del caso k-means k=2 donde agrupó la mayoría de las observaciones de Argentina en uno de los clusters.
 
-http://crdd.osdd.net/clusters.php
-
-https://www.sciencedirect.com/topics/chemistry/molecular-cluster
